add test code which refines a mesh, by adaptively selecting surface or volume elements for refinement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -390,7 +390,7 @@ add_subdirectory(doc)
 add_subdirectory(windows)
 add_subdirectory(nglib)
 add_subdirectory(tests)
-
+add_subdirectory(nglib_test)
 
 #######################################################################
 # Debian packager
