add "test" for stl meshing

--- a/nglib_test/CMakeLists.txt
+++ b/nglib_test/CMakeLists.txt
@@ -1,2 +1,7 @@
+include_directories(${CMAKE_SOURCE_DIR}/nglib)
+
 add_executable(ng_refine ng_refine.cpp)
 target_link_libraries(ng_refine nglib)
+
+add_executable(ng_stl ng_stl.cpp)
+target_link_libraries(ng_stl nglib)
